--- a/deploy/helm/configure-pipeline-server/templates/pipeline-ingestion-secret.yaml
+++ b/deploy/helm/configure-pipeline-server/templates/pipeline-ingestion-secret.yaml
@@ -11,7 +11,7 @@ stringData:
   SOURCE: S3
   EMBEDDING_MODEL: {{ .Values.embedding_model }}
   NAME:  {{ .Values.name }}
-  VERSION:  {{ .Values.version }}
+  VERSION:  "{{ .Values.version }}"
   ACCESS_KEY_ID: {{ .Values.minio.minio_rag_user }}
   SECRET_ACCESS_KEY: {{ .Values.minio.minio_rag_password }}
   ENDPOINT_URL:  "http://minio.{{ .Release.Namespace }}.svc.cluster.local:9000"
