--- a/deploy/helm/rag-ui/charts/llama-stack/values.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/values.yaml
@@ -144,6 +144,10 @@ models:
     id: meta-llama/Llama-3.2-1B-Instruct
     enabled: false
     url: local-ns
+  llama-3-1-8b-instruct:
+    id: meta-llama/Llama-3.1-8B-Instruct
+    enabled: false
+    url: local-ns
   llama-guard-3-1b:
     id: meta-llama/Llama-Guard-3-1B
     enabled: false
