--- a/frontend/Containerfile
+++ b/frontend/Containerfile
@@ -5,11 +5,8 @@ FROM python:3.12-slim
 WORKDIR /app
 COPY . /app/
 RUN /usr/local/bin/python -m pip install --upgrade pip && \
-    /usr/local/bin/pip3 install -r requirements.txt
-
-# Make sure we run the right ui, and not the one provided by llama_stack
-ENV PYTHONPATH=/app:$PYTHONPATH
+    /usr/local/bin/pip3 install /app
 
 EXPOSE 8501
 
-ENTRYPOINT ["streamlit", "run", "/app/llama_stack/distribution/ui/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+ENTRYPOINT ["streamlit", "run", "/app/llama_stack_ui/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
