Support deploying tavily secret
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/deploy/helm/rag-ui/charts/llama-stack/values.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/values.yaml
@@ -130,6 +130,11 @@ tolerations: []
 
 affinity: {}
 
+secrets:
+  tavily-search:
+    env: TAVILY_SEARCH_API_KEY
+    value:
+
 models:
   llama-3-2-3b-instruct:
     id: meta-llama/Llama-3.2-3B-Instruct
