--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -132,7 +132,8 @@ helm_llama_stack_args = \
     $(if $(LLM_URL),--set-json llama-stack.models.$(LLM).url='"$(LLM_URL)"',) \
     $(if $(SAFETY_URL),--set-json llama-stack.models.$(SAFETY).url='"$(SAFETY_URL)"',) \
     $(if $(LLM_API_TOKEN),--set-json llama-stack.models.$(LLM).apiToken='"$(LLM_API_TOKEN)"',) \
-    $(if $(SAFETY_API_TOKEN),--set-json llama-stack.models.$(SAFETY).apiToken='"$(SAFETY_API_TOKEN)"',)
+    $(if $(SAFETY_API_TOKEN),--set-json llama-stack.models.$(SAFETY).apiToken='"$(SAFETY_API_TOKEN)"',) \
+    $(if $(TAVILY_SEARCH_API_TOKEN),--set llama-stack.secrets.tavily-search.value=$(TAVILY_SEARCH_API_TOKEN),)
 
 .PHONY: create-minio-bucket
 create-minio-bucket:
