--- a/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
@@ -43,6 +43,15 @@ spec:
             {{- toYaml .Values.args | nindent 12 }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
+            {{- range $key, $secret := .Values.secrets }}
+            {{- if not (empty $secret.value) }}
+            - name: {{ $secret.env }}
+              valueFrom:
+                secretKeyRef:
+                  key: {{ $secret.env }}
+                  name: {{ $key }}
+            {{- end }}
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
