--- a/deploy/helm/rag-ui/charts/llama-stack/templates/secret.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/templates/secret.yaml
@@ -1,12 +1,10 @@
-{{- range $key, $secret := .Values.secrets }}
-{{- if not (empty $secret.value) }}
 ---
 kind: Secret
 apiVersion: v1
 metadata:
-  name: {{ $key }}
-data:
-  {{ $secret.env }}: {{ $secret.value | b64enc | quote }}
+  name: {{ .Chart.Name }}-env
 type: Opaque
-{{- end }}
-{{- end }}
+data:
+  {{- range $key, $value:= .Values.secrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+  {{- end }}
