--- a/deploy/helm/rag-ui/charts/llama-stack/values.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/values.yaml
@@ -131,9 +131,7 @@ tolerations: []
 affinity: {}
 
 secrets:
-  tavily-search:
-    env: TAVILY_SEARCH_API_KEY
-    value:
+  TAVILY_SEARCH_API_KEY: fake
 
 models:
   llama-3-2-3b-instruct:
