Split helm umbrella to multiple standalone charts
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -1,11 +1,12 @@
 # Makefile for RAG Deployment
 # Replaces the original deploy.sh script with additional uninstall functionality
-
 ifeq ($(NAMESPACE),)
 ifeq (,$(filter list-models% help,$(MAKECMDGOALS)))
 $(error NAMESPACE is not set)
 endif
 endif
+
+MAKEFLAGS += --no-print-directory
 
 # Default values
 POSTGRES_USER ?= postgres
@@ -13,17 +14,16 @@ POSTGRES_PASSWORD ?= rag_password
 POSTGRES_DBNAME ?= rag_blueprint
 MINIO_USER ?= minio_rag_user
 MINIO_PASSWORD ?= minio_rag_password
-RELEASE_NAME ?= rag
-CHART_PATH ?= rag-ui
 HF_TOKEN ?= $(shell bash -c 'read -r -p "Enter Hugging Face Token: " HF_TOKEN; echo $$HF_TOKEN')
-LLM_SERVICE_CHART_PATH ?= llm-service
-LLM_SERVICE_RELEASE_NAME ?= llm-service
-MCP_SERVERS_CHART_PATH ?= mcp-servers
-MCP_SERVERS_RELEASE_NAME ?= mcp-servers
-INGESTION_PIPELINE_CHART_PATH ?= ingestion-pipeline
-INGESTION_PIPELINE_RELEASE_NAME ?= ingestion-pipeline
-CONFIGURE_PIPELINE_SERVER_CHART_PATH ?= configure-pipeline-server
-CONFIGURE_PIPELINE_SERVER_RELEASE_NAME ?= configure-pipeline-server
+LLM_SERVICE_CHART := llm-service
+LLAMA_STACK_CHART := llama-stack
+MCP_SERVERS_CHART := mcp-servers
+PGVECTOR_CHART := pgvector
+MINIO_CHART := minio
+RAG_UI_CHART := rag-ui
+INGESTION_PIPELINE_CHART := ingestion-pipeline
+CONFIGURE_PIPELINE_SERVER_CHART := configure-pipeline-server
+COMPONENTS := $(LLM_SERVICE_CHART) $(MCP_SERVERS_CHART) $(PGVECTOR_CHART) $(MINIO_CHART) $(RAG_UI_CHART) $(INGESTION_PIPELINE_CHART) $(CONFIGURE_PIPELINE_SERVER_CHART) $(LLAMA_STACK_CHART)
 TOLERATIONS_TEMPLATE=[{"key":"$(1)","effect":"NoSchedule","operator":"Exists"}]
 
 #ingestion pipeline configuration
@@ -41,7 +41,6 @@ PDF_FILE = ../../notebooks/Zippity_Zoo.pdf
 
 S3_TEMPLATE={"access_key_id":"$(1)","secret_access_key":"$(2)","bucket_name":"$(3)","endpoint_url":"$(4)","region":"$(5)"}
 
-
 # Default target
 .PHONY: help
 help:
@@ -56,8 +55,6 @@ help:
 	@echo ""
 	@echo "Configuration options (set via environment variables or make arguments):"
 	@echo "  NAMESPACE                - Target namespace (default: llama-stack-rag)"
-	@echo "  RELEASE_NAME             - Helm release name (default: rag)"
-	@echo "  CHART_PATH               - Path to the Helm chart (default: rag-ui)"
 	@echo "  HF_TOKEN                 - Hugging Face Token (will prompt if not provided)"
 	@echo "  {SAFETY,LLM}             - Model id as defined in values (eg. llama-3-2-1b-instruct)"
 	@echo "  {SAFETY,LLM}_URL         - Model URL"
@@ -66,21 +63,57 @@ help:
 
 # Create namespace and deploy
 namespace:
-	oc create namespace $(NAMESPACE) && oc label namespace $(NAMESPACE) modelmesh-enabled=false ||:
-	oc project $(NAMESPACE) ||:
+	@oc create namespace $(NAMESPACE) &> /dev/null && oc label namespace $(NAMESPACE) modelmesh-enabled=false ||:
+	@oc project $(NAMESPACE) &> /dev/null ||:
 
-.PHONY: install-mcp-servers
-install-mcp-servers: namespace
+helm-install-%: namespace
+	$(if $(HELM_ARGS_FUNC), $(eval HELM_ARGS := $(call $(HELM_ARGS_FUNC))))
+	@echo "$*: Deploying Helm chart in namespace $(NAMESPACE)..."
+	@helm upgrade --install $* ./$* -n $(NAMESPACE) $(HELM_ARGS) $(EXTRA_HELM_ARGS) > /dev/null && echo "$*: Helm chart installed successfully"
 
-	@echo "Deploying Helm chart $(MCP_SERVERS_CHART_PATH) as release $(MCP_SERVERS_RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(MCP_SERVERS_RELEASE_NAME) $(MCP_SERVERS_CHART_PATH) -n $(NAMESPACE)
+helm-uninstall-%:
+	@echo "$*: Uninstalling Helm chart from namespace $(NAMESPACE)..."
+	@helm uninstall $* -n $(NAMESPACE) &> /dev/null || echo "$* is not installed or already removed."
 
-.PHONY: configure-pipeline-server
-configure-pipeline-server: namespace
+list-models-%:
+	@helm template dummy-release $(LLM_SERVICE_CHART) --set _debugListModels=true --values $(LLM_SERVICE_CHART)/values-$*.yaml |grep ^model
 
-	@echo "Deploying Helm chart $(CONFIGURE_PIPELINE_SERVER_CHART_PATH) as release $(CONFIGURE_PIPELINE_SERVER_RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(CONFIGURE_PIPELINE_SERVER_RELEASE_NAME) $(CONFIGURE_PIPELINE_SERVER_CHART_PATH) -n $(NAMESPACE)
+.PHONY: list-models
+list-models: list-models-gpu
 
+
+helm_llm_service_args = \
+    --set secret.hf_token=$(HF_TOKEN) \
+    $(if $(LLM),--set models.$(LLM).enabled=true,) \
+    $(if $(SAFETY),--set models.$(SAFETY).enabled=true,) \
+    $(if $(LLM_TOLERATION),--set-json models.$(LLM).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(LLM_TOLERATION))',) \
+    $(if $(SAFETY_TOLERATION),--set-json models.$(SAFETY).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(SAFETY_TOLERATION))',)
+
+install-llm-service-%: namespace
+	@$(MAKE) helm-install-$(LLM_SERVICE_CHART) HELM_ARGS_FUNC=helm_llm_service_args EXTRA_HELM_ARGS="--values=$(LLM_SERVICE_CHART)/values-$*.yaml "
+	@echo "Waiting for model services to deploy. It will take around 10-15 minutes depending on the size of the model..."
+	@oc wait -n $(NAMESPACE) --for=condition=Ready --timeout=60m inferenceservice --all ||:
+
+.PHONY: install-llm-service
+install-llm-service: install-llm-service-gpu
+
+helm_pgvector_args = \
+    --set secret.user=$(POSTGRES_USER) \
+    --set secret.password=$(POSTGRES_PASSWORD) \
+    --set secret.dbname=$(POSTGRES_DBNAME)
+
+helm_minio_args = \
+    --set secret.user=$(MINIO_USER) \
+    --set secret.password=$(MINIO_PASSWORD)
+
+helm_llama_stack_args = \
+    $(if $(LLM),--set models.$(LLM).enabled=true,) \
+    $(if $(SAFETY),--set models.$(SAFETY).enabled=true,) \
+    $(if $(LLM_URL),--set models.$(LLM).url='$(LLM_URL)',) \
+    $(if $(SAFETY_URL),--set models.$(SAFETY).url='$(SAFETY_URL)',) \
+    $(if $(LLM_API_TOKEN),--set models.$(LLM).apiToken='$(LLM_API_TOKEN)',) \
+    $(if $(SAFETY_API_TOKEN),--set models.$(SAFETY).apiToken='$(SAFETY_API_TOKEN)',) \
+    $(if $(LLAMA_STACK_ENV),--set-json secrets='$(LLAMA_STACK_ENV)',)
 
 set_ingestion_args = \
 	$(if $(SOURCE),--set source='$(SOURCE)',) \
@@ -89,51 +122,19 @@ set_ingestion_args = \
 	$(if $(INGESTION_PIPELINE_VERSION),--set version='$(INGESTION_PIPELINE_VERSION)',) \
     $(if $(SOURCE),--set-json S3='$(call S3_TEMPLATE,$(ACCESS_KEY_ID),$(SECRET_ACCESS_KEY),$(BUCKET_NAME),$(ENDPOINT_URL),$(REGION))',)
 
-.PHONY: create-ingestion-pipeline
-create-ingestion-pipeline: namespace
-
-	@$(eval INGESTION_ARGS := $(call set_ingestion_args))
-
-	@echo "Deploying Helm chart $(INGESTION_PIPELINE_CHART_PATH) as release $(INGESTION_PIPELINE_RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(INGESTION_PIPELINE_RELEASE_NAME) $(INGESTION_PIPELINE_CHART_PATH) -n $(NAMESPACE) $(INGESTION_ARGS) ||:
-
-list-models-%:
-	@helm template dummy-release $(LLM_SERVICE_CHART_PATH) --set _debugListModels=true --values $(LLM_SERVICE_CHART_PATH)/values-$*.yaml |grep ^model
-
-.PHONY: list-models
-list-models: list-models-gpu
-
-helm_llm_service_args = \
-    $(if $(LLM),--set-json models.$(LLM).enabled='true',) \
-    $(if $(SAFETY),--set-json models.$(SAFETY).enabled='true',) \
-    $(if $(LLM_TOLERATION),--set-json models.$(LLM).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(LLM_TOLERATION))',) \
-    $(if $(SAFETY_TOLERATION),--set-json models.$(SAFETY).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(SAFETY_TOLERATION))',)
-
-install-llm-service-%: namespace
-	@$(eval HELM_ARGS := $(call helm_llm_service_args))
-
-	@echo "Deploying Helm chart $(LLM_SERVICE_CHART_PATH) as release $(LLM_SERVICE_RELEASE_NAME) in namespace $(NAMESPACE)..."; \
-	helm upgrade --install $(LLM_SERVICE_RELEASE_NAME) $(LLM_SERVICE_CHART_PATH) -n $(NAMESPACE) --values $(LLM_SERVICE_CHART_PATH)/values-$*.yaml \
-		--set secret.hf_token=$(HF_TOKEN) $(HELM_ARGS) $(EXTRA_HELM_ARGS)
-	@echo "Waiting for model services to deploy. It will take around 10-15 minutes depending on the size of the model..."
-	oc wait -n $(NAMESPACE) --for=condition=Ready --timeout=60m inferenceservice --all ||:
-
-.PHONY: install-llm-service
-install-llm-service: install-llm-service-gpu
-
-helm_llama_stack_args = \
-    --set pgvector.secret.user=$(POSTGRES_USER) \
-    --set pgvector.secret.password=$(POSTGRES_PASSWORD) \
-    --set pgvector.secret.dbname=$(POSTGRES_DBNAME) \
-    --set minio.secret.user=$(MINIO_USER) \
-    --set minio.secret.password=$(MINIO_PASSWORD) \
-    $(if $(LLM),--set-json llama-stack.models.$(LLM).enabled='true',) \
-    $(if $(SAFETY),--set-json llama-stack.models.$(SAFETY).enabled='true',) \
-    $(if $(LLM_URL),--set-json llama-stack.models.$(LLM).url='"$(LLM_URL)"',) \
-    $(if $(SAFETY_URL),--set-json llama-stack.models.$(SAFETY).url='"$(SAFETY_URL)"',) \
-    $(if $(LLM_API_TOKEN),--set-json llama-stack.models.$(LLM).apiToken='"$(LLM_API_TOKEN)"',) \
-    $(if $(SAFETY_API_TOKEN),--set-json llama-stack.models.$(SAFETY).apiToken='"$(SAFETY_API_TOKEN)"',) \
-    $(if $(LLAMA_STACK_ENV),--set-json llama-stack.secrets='$(LLAMA_STACK_ENV)',)
+.PHONY: install-rag
+install-rag: namespace helm-install-$(MCP_SERVERS_CHART) helm-install-$(PGVECTOR_CHART) helm-install-$(MINIO_CHART)
+	@$(MAKE) helm-install-$(PGVECTOR_CHART) HELM_ARGS_FUNC=helm_pgvector_args
+	@$(MAKE) helm-install-$(MINIO_CHART) HELM_ARGS_FUNC=helm_minio_args
+	@$(MAKE) helm-install-$(LLAMA_STACK_CHART) HELM_ARGS_FUNC=helm_llama_stack_args
+	@$(MAKE) helm-install-$(RAG_UI_CHART)
+	@$(MAKE) create-minio-bucket
+	@$(MAKE) upload-pdf
+	@$(MAKE) status
+	@$(MAKE) helm-install-$(CONFIGURE_PIPELINE_SERVER_CHART)
+	@$(MAKE) helm-install-$(INGESTION_PIPELINE_CHART) HELM_ARGS_FUNC=set_ingestion_args ||:
+	@echo "Waiting for deployment to be ready..."
+	@$(MAKE) wait
 
 .PHONY: create-minio-bucket
 create-minio-bucket:
@@ -153,23 +154,6 @@ upload-pdf:
 	oc exec -n $(NAMESPACE) minio-0 -- bash -c "mc alias set local http://localhost:9000 $(MINIO_USER) $(MINIO_PASSWORD) && mc cp /tmp/$(shell basename $(PDF_FILE)) local/$(BUCKET_NAME)/ && rm /tmp/$(shell basename $(PDF_FILE))"
 	@echo "PDF file $(PDF_FILE) uploaded successfully to Minio bucket $(BUCKET_NAME)"
 
-.PHONY: install-rag
-install-rag: namespace install-mcp-servers
-	@$(eval HELM_ARGS := $(call helm_llama_stack_args))
-
-	@echo "Deploying Helm chart $(CHART_PATH) as release $(RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(RELEASE_NAME) $(CHART_PATH) -n $(NAMESPACE) $(HELM_ARGS) $(EXTRA_HELM_ARGS)
-
-	@$(MAKE) create-minio-bucket
-	@$(MAKE) upload-pdf
-	@$(MAKE) status
-	@$(MAKE) configure-pipeline-server
-	@$(MAKE) create-ingestion-pipeline
-
-
-	@echo "Waiting for deployment to be ready..."
-	@$(MAKE) wait
-
 install-gpu: install-llm-service-gpu install-rag
 install-cpu: install-llm-service-cpu install-rag
 
@@ -178,55 +162,18 @@ install: install-gpu
 
 # Uninstall the deployment and clean up
 .PHONY: uninstall
-uninstall: uninstall-helm-release uninstall-mcp-servers uninstall-ingestion-pipeline uninstall-llm-service remove-secrets remove-pvcs
-
+uninstall: $(addprefix helm-uninstall-,$(COMPONENTS)) remove-pvcs
 	@echo "Deleting remaining pods in namespace $(NAMESPACE)"
-	oc delete pods -n $(NAMESPACE) --all
+	@oc delete pods -n $(NAMESPACE) --all
 	@echo "Checking for any remaining resources in namespace $(NAMESPACE)..."
 	@echo "If you want to completely remove the namespace, run: oc delete project $(NAMESPACE)"
-
 	@echo "Remaining resources in namespace $(NAMESPACE):"
 	@$(MAKE) status
 
-.PHONY: uninstall-llm-service
-uninstall-llm-service:
-
-	@echo "Uninstalling Helm release $(LLM_SERVICE_RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(LLM_SERVICE_RELEASE_NAME) -n $(NAMESPACE) || echo "LLM services are not installed or already removed."
-
-.PHONY: uninstall-mcp-servers
-uninstall-mcp-servers:
-
-	@echo "Uninstalling Helm release $(MCP_SERVERS_RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(MCP_SERVERS_RELEASE_NAME) -n $(NAMESPACE) || echo "MCP servers are not installed or already removed."
-
-.PHONY: uninstall-ingestion-pipeline
-uninstall-ingestion-pipeline:
-
-	@echo "Uninstalling Helm release $(INGESTION_PIPELINE_RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(INGESTION_PIPELINE_RELEASE_NAME) -n $(NAMESPACE) || echo "Pipelines are not installed or already removed."
-
-	@echo "Uninstalling Helm release $(CONFIGURE_PIPELINE_SERVER_RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(CONFIGURE_PIPELINE_SERVER_RELEASE_NAME) -n $(NAMESPACE) || echo "Pipeline is not configured or already removed."
-
-
-.PHONY: uninstall-helm-release
-uninstall-helm-release:
-
-	@echo "Uninstalling Helm release $(RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(RELEASE_NAME) -n $(NAMESPACE) || echo "Helm release not found or already removed."
-
-.PHONY: remove-secrets
-remove-secrets:
-
-	@echo "Removing pipeline secret"
-	oc delete secret -n $(NAMESPACE) rag-pipeline-secrets || echo "Secret not found or already removed."
-
 .PHONY: remove-pvcs
 remove-pvcs:
-
 	@echo "Removing pgvector and minio PVCs"
-	oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name | grep -E '^(pg|minio)-data' | xargs oc delete pvc -n $(NAMESPACE) ||:
+	@oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name | grep -E '^(pg|minio)-data' | xargs -I {} oc delete pvc -n $(NAMESPACE) {} ||:
 
 # Check deployment status
 .PHONY: status
