--- a/deploy/helm/minio/templates/secret.yaml
+++ b/deploy/helm/minio/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: minio
   labels:
-    {{- include "pgvector.labels" . | nindent 4 }}
+    {{- include "minio.labels" . | nindent 4 }}
 data:
   user: {{ .Values.secret.user | b64enc | quote }}
   password: {{ .Values.secret.password | b64enc | quote }}
