--- a/deploy/helm/ingestion-pipeline/templates/url-secret.yaml
+++ b/deploy/helm/ingestion-pipeline/templates/url-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{- include "ingestion-pipeline.name" . }}
+  name: "{{- include "ingestion-pipeline.name" . }}"
   annotations: {}
   labels:
     opendatahub.io/dashboard: 'true'
@@ -11,7 +11,6 @@ stringData:
   SOURCE: {{ .Values.source }}
   EMBEDDING_MODEL: {{ .Values.embedding_model }}
   NAME:  {{ .Values.name }}
-  VERSION:  {{ .Values.version }}
-  URLS: {{ .Values.URLS }}
-{{- end }} 
-
+  VERSION:  "{{ .Values.version }}"
+  URLS: '{{- .Values.URL.URLS -}}'
+{{- end }}
