--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Local LLM stack with UI for RAG-based applications"
 authors = [
     { name = "Saurabh Agarwal", email = "sauagarw@redhat.com" }
 ]
-readme = "../README.md"
+readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "streamlit",
