Use charts from ai-architecture-charts
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/deploy/helm/rag/templates/route.yaml
+++ b/deploy/helm/rag/templates/route.yaml
@@ -1,13 +1,13 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: {{ include "rag-ui.fullname" . }}
+  name: {{ include "rag.fullname" . }}
   labels:
-    {{- include "rag-ui.labels" . | nindent 4 }}
+    {{- include "rag.labels" . | nindent 4 }}
 spec:
   to:
     kind: Service
-    name: {{ include "rag-ui.fullname" . }}
+    name: {{ include "rag.fullname" . }}
     weight: 100
   port:
     targetPort: {{ .Values.service.port }}
